--- a/Draven/packages.config
+++ b/Draven/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Google.Protobuf" version="3.3.0" targetFramework="net452" />
-  <package id="Mono.Security" version="3.2.3.0" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.10-rc" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.1-beta3" targetFramework="net452" />
+  <package id="Mono.Security" version="3.2.3.0" targetFramework="net46" />
+  <package id="MySql.Data" version="6.10.6" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
 </packages>
